--- a/U6A3/index.html
+++ b/U6A3/index.html
@@ -14,6 +14,7 @@
         <script type="text/javascript" src="js/lib/console.min.js"></script>
         <script type="text/javascript" src="js/lib/jquery.min.js"></script>
         <script type="text/javascript" src="js/lib/TweenMax.min.js"></script>
+        <script type="text/javascript" src="js/lib/webfont.min.js"></script>
         <script type="text/javascript" src="js/lib/createjs.min.js"></script>
         <script type="text/javascript" src="js/lib/easeljs-NEXT.min.js"></script>
         <script type="text/javascript" src="js/lib/dealersjs.min.js"></script>
