--- a/U1A1/index.html
+++ b/U1A1/index.html
@@ -6,7 +6,7 @@
         <title>U1A1</title>
        <link href='css/fonts.css' rel='stylesheet' type='text/css'>
         <style>
-            *{margin: 0; padding: 0}
+            *{margin: 0; padding: 0; overflow:hidden; -ms-touch-action:none;}
         </style>
     </head>
     <body>
