--- a/U4A6/index.html
+++ b/U4A6/index.html
@@ -6,7 +6,7 @@
         <title>U4A6</title>
         <link href='css/fonts.css' rel='stylesheet' type='text/css'>
         <style>
-            *{margin: 0; padding: 0}
+            *{margin: 0; padding: 0;}
         </style>
     </head>
     <body>
