--- a/U1A1/index.html
+++ b/U1A1/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
-        <meta charset="utf-8" />
-        <title>U1A1</title>
-       <link href='css/fonts.css' rel='stylesheet' type='text/css'>
-        <style>
-            *{margin: 0; padding: 0; overflow:hidden; -ms-touch-action:none;}
-        </style>
-    </head>
-    <body>
-        <canvas id="oda" data-loadercolor='#f59743'></canvas>
-        <script type="text/javascript" src="js/lib/webfont.min.js"></script>
-        <script type="text/javascript" src="js/lib/console.min.js"></script>
-        <script type="text/javascript" src="js/lib/jquery.min.js"></script>
-        <script type="text/javascript" src="js/lib/TweenMax.min.js"></script>
-        <script type="text/javascript" src="js/lib/createjs.min.js"></script>
-        <script type="text/javascript" src="js/lib/easeljs-NEXT.min.js"></script>
-        <script type="text/javascript" src="js/lib/dealersjs.min.js"></script>
-        <script type="text/javascript" src="js/scripts/min/classes.min.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
-        <script type="text/javascript" src="js/scripts/app.js"></script>
-    </body>
+<head>
+	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+	<meta charset="utf-8" />
+	<title>U1A1</title>
+	<link href='css/fonts.css' rel='stylesheet' type='text/css'>
+	<style>
+	*{margin: 0; padding: 0; overflow:hidden; -ms-touch-action:none;}
+	</style>
+</head>
+<body>
+	<canvas id="oda" data-loadercolor='#f59743'></canvas>
+	<script type="text/javascript" src="js/lib/webfont.min.js"></script>
+	<script type="text/javascript" src="js/lib/console.min.js"></script>
+	<script type="text/javascript" src="js/lib/jquery.min.js"></script>
+	<script type="text/javascript" src="js/lib/TweenMax.min.js"></script>
+	<script type="text/javascript" src="js/lib/createjs.min.js"></script>
+	<script type="text/javascript" src="js/lib/easeljs-NEXT.min.js"></script>
+	<script type="text/javascript" src="js/lib/dealersjs.min.js"></script>
+	<script type="text/javascript" src="js/scripts/min/classes.min.js"></script>
+	<script type="text/javascript" src="js/main.min.js"></script>
+	<script type="text/javascript" src="js/scripts/min/app.min.js"></script>
+</body>
 </html>
