--- a/U5A2/index.html
+++ b/U5A2/index.html
@@ -6,7 +6,7 @@
         <title>U5A2</title>
         <link href='css/fonts.css' rel='stylesheet' type='text/css'>
         <style>
-            *{margin: 0; padding: 0}
+            *{margin: 0; padding: 0;}
         </style>
     </head>
     <body>
